crates/pcb-star-core/tests/snapshots/input__config_convert_preserves_correct_types.snap
---
source: projects/cli/crates/diode_star_core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "top.star",
    children: [
        FrozenValue(
            Module {
                name: "test",
                source: "/Module.star",
                properties: {
                    "converter_called": "FrozenValue(StarlarkBool(false))",
                    "voltage_unit": "FrozenValue(\"V\")",
                    "voltage_value": "FrozenValue(StarlarkFloat(5.0))",
                },
            },
        ),
    ],
}
[]
