crates/pcb-star-core/tests/snapshots/input__config_convert_with_default.snap
---
source: projects/cli/crates/diode_star_core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "top.star",
    children: [
        FrozenValue(
            Module {
                name: "test",
                source: "/Module.star",
                properties: {
                    "name_value": "FrozenValue(\"value_42\")",
                },
            },
        ),
    ],
}
[]
