crates/pcb-star-core/tests/snapshots/input__config_str.snap
---
source: projects/cli/crates/diode_star_core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "test.star",
    children: [
        FrozenValue(
            Component {
                name: "test_comp",
                footprint: "test_footprint",
                prefix: "U",
                pins: {
                    "in": FrozenValue(
                        "1",
                    ),
                    "out": FrozenValue(
                        "2",
                    ),
                },
                connections: {
                    "in": FrozenValue(
                        Net {
                            name: "1",
                            id: "<ID>",
                        },
                    ),
                    "out": FrozenValue(
                        Net {
                            name: "2",
                            id: "<ID>",
                        },
                    ),
                },
                properties: {
                    "symbol_path": FrozenValue(
                        NoneType,
                    ),
                    "value": FrozenValue(
                        "",
                    ),
                },
            },
        ),
    ],
}
[
    (
        "value",
        ParameterInfo {
            name: "value",
            type_info: String,
            required: true,
            default_value: None,
        },
    ),
]
