crates/pcb-star-core/tests/snapshots/input__config_with_convert_function.snap
---
source: projects/cli/crates/diode_star_core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "top.star",
    children: [
        FrozenValue(
            Module {
                name: "test",
                source: "/Module.star",
                properties: {
                    "current_unit": "FrozenValue(\"A\")",
                    "current_value": "FrozenValue(StarlarkFloat(2.5))",
                    "optional_power_is_none": "FrozenValue(StarlarkBool(true))",
                    "voltage_unit": "FrozenValue(\"V\")",
                    "voltage_value": "FrozenValue(StarlarkFloat(5.0))",
                },
            },
        ),
    ],
}
[]
