crates/pcb-star-core/tests/snapshots/input__config_without_convert_fails_type_check.snap
---
source: projects/cli/crates/diode_star_core/tests/input.rs
expression: output
---
Error: top.star:5:5-8:2 Error instantiating `Module`
Error: /Module.star:9:11-83 Input 'voltage' (type) has wrong type for this placeholder: expected record(value=field(float), unit=field(str)), got "5V"
