crates/pcb-star-core/tests/snapshots/input__interface_io.snap
---
source: projects/cli/crates/diode_star_core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "top.star",
    children: [
        FrozenValue(
            Module {
                name: "U1",
                source: "/Module.star",
            },
        ),
    ],
}
[]
