crates/pcb-star-core/tests/snapshots/input__interface_multiple_net_templates.snap
---
source: projects/cli/crates/diode_star_core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "test.star",
    children: [
        FrozenValue(
            Component {
                name: "U1",
                type: "mcu",
                footprint: "QFN:32",
                prefix: "U",
                pins: {
                    "EN": FrozenValue(
                        "3",
                    ),
                    "GND": FrozenValue(
                        "2",
                    ),
                    "VCC": FrozenValue(
                        "1",
                    ),
                },
                connections: {
                    "EN": FrozenValue(
                        Net {
                            name: "MCU_EN",
                            id: "<ID>",
                            properties: {
                                "active": FrozenValue(
                                    "high",
                                ),
                            },
                        },
                    ),
                    "GND": FrozenValue(
                        Net {
                            name: "MCU_GND",
                            id: "<ID>",
                            properties: {
                                "type": FrozenValue(
                                    "ground",
                                ),
                            },
                        },
                    ),
                    "VCC": FrozenValue(
                        Net {
                            name: "MCU_3V3",
                            id: "<ID>",
                            properties: {
                                "type": FrozenValue(
                                    "power",
                                ),
                                "voltage": FrozenValue(
                                    "3.3V",
                                ),
                            },
                        },
                    ),
                },
                properties: {
                    "symbol_path": FrozenValue(
                        NoneType,
                    ),
                },
            },
        ),
        FrozenValue(
            Component {
                name: "U2",
                type: "sensor",
                footprint: "SOT:23-6",
                prefix: "U",
                pins: {
                    "ENABLE": FrozenValue(
                        "3",
                    ),
                    "VDD": FrozenValue(
                        "1",
                    ),
                    "VSS": FrozenValue(
                        "2",
                    ),
                },
                connections: {
                    "ENABLE": FrozenValue(
                        Net {
                            name: "SENSOR_EN",
                            id: "<ID>",
                            properties: {
                                "active": FrozenValue(
                                    "high",
                                ),
                            },
                        },
                    ),
                    "VDD": FrozenValue(
                        Net {
                            name: "SENSOR_3V3",
                            id: "<ID>",
                            properties: {
                                "type": FrozenValue(
                                    "power",
                                ),
                                "voltage": FrozenValue(
                                    "3.3V",
                                ),
                            },
                        },
                    ),
                    "VSS": FrozenValue(
                        Net {
                            name: "SENSOR_GND",
                            id: "<ID>",
                            properties: {
                                "type": FrozenValue(
                                    "ground",
                                ),
                            },
                        },
                    ),
                },
                properties: {
                    "symbol_path": FrozenValue(
                        NoneType,
                    ),
                },
            },
        ),
    ],
}
[]
